# ha-realtime-trains

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  conftest.py  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/workflows/: hacs.yml  hassfest.yml  lint.yml  pytest.yml  release.yml
custom_components/realtime_trains/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  models.py  quality_scale.yaml  sensor.py  services.py  services.yaml  strings.json  subentry_flows.py
custom_components/realtime_trains/translations/: en.json
docs/: api-credentials.md  architecture.md  automation-recipes.md  data-update.md  entities.md  faq.md  getting-started.md  known-limitations.md  services.md  supported-devices.md  troubleshooting.md  use-cases.md
scripts/: __init__.py  capture_live_fixtures.py
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_fixtures.py  test_live_api.py  test_models.py  test_sensor_entities.py  test_services.py
tests/fixtures/: api_info.json  api_info_401_invalid_token.json  api_info_429_rate_limited.json  get_access_token.json  location_clphmjn.json  service_1L40_2026-06-18.json  service_not_found.json  stops.json
